# Extract-PDF-to-CSV

./: .gitignore  README.md  analyse.py  banque.py  classification.py  compte.py  compte_courant.py  compte_courant_lcl.py  compte_csv.py  date_utils.py  livret.py  main.py  pea.py  pyproject.toml  requirements  update_mtime.py
Grafana/: Finances-1735600676202.json  Finances-1735754330833.json  Finances-1736347781207.json
create_tables/: epargne.sql  pea.sql
grafana/: Finances.json
