[project]
name = "extract-pdf-to-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pykernel>=0.1.6",
    "pypdf>=5.7.0",
    "ruff>=0.12.5",
]
