[project]
name = "extract-pdf-to-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "psycopg2>=2.9.11",
    "pykernel>=0.1.6",
    "pypdf>=5.7.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
